# medicine-course-analysis

./: README.md  pyproject.toml
medicine/: main.py
