[tool.poetry]
name = "medicine"
version = "0.1.0"
description = "Data analysis of the medicine courses available for FY1/FY2 for 2024"
authors = ["glyn-stevens <glynst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.18.0"
pandas = "^2.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^24.1.1"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
